<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:weightSum="4"
        android:gravity="center">


        <TextView
            android:id="@+id/linear_name_color_tw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/color_name"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/linear_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/linear_unbind_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unbind_service"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">

        <Button
            android:id="@+id/bind_service_btn"
            android:text="@string/bind_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/relative_time_tw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />
        <TextView
            android:id="@+id/relative_day_tw"
            android:text="@string/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            />
        <TextView
            android:id="@+id/relative_date_tw"
            android:layout_margin="@dimen/default_margin_8dp"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_below="@+id/bind_service_btn"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:weightSum="6">

        <Button
            android:id="@+id/red_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/cyan_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/yellow_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/green_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/blue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/magenta_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal" />


    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">


        <TextView
            android:id="@+id/hours_and_minutes_tw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_00_00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/seconds_tw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintCircle="@id/hours_and_minutes_tw"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="60dp" />
    </android.support.constraint.ConstraintLayout>






</GridLayout>